--- a/demo/src/_temp/source-list.mdx
+++ b/demo/src/_temp/source-list.mdx
@@ -3,7 +3,7 @@ navigationLabel: sourceList
 ---
 
 <SourceList>
-  {source => (
+  {(source) => (
     <ul>
       {source.map((edge, index) => {
         const {
