--- a/demo/src/posts/post-1.mdx
+++ b/demo/src/posts/post-1.mdx
@@ -3,16 +3,16 @@ title: Post 1
 date: 2020-04-26
 dateModified: 2020-05-05
 author: Paul Scanlon
-tags: ["JavaScript", "React", "GatsbyJs", "HTML", "CSS", "theme-ui"]
+tags: ['JavaScript', 'React', 'GatsbyJs', 'HTML', 'CSS', 'theme-ui']
 featuredImage: markus-spiske-466ENaLuhLY-unsplash.jpg
 embeddedImages:
   - markus-spiske-FXFz-sW0uwo-unsplash.jpg
 ---
 
-
-
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id enim et mauris elementum lobortis. Donec non tellus justo. Ut sit amet elit mauris. Praesent eleifend cursus luctus. Praesent posuere rhoncus maximus. Donec nec felis nec metus semper pharetra ut ut libero. Ut hendrerit dui ut tincidunt egestas. Donec interdum pharetra arcu, vel egestas turpis ornare a. Phasellus quis euismod diam, sed convallis dolor.
-
+Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id enim et mauris elementum lobortis. Donec non tellus
+justo. Ut sit amet elit mauris. Praesent eleifend cursus luctus. Praesent posuere rhoncus maximus. Donec nec felis nec
+metus semper pharetra ut ut libero. Ut hendrerit dui ut tincidunt egestas. Donec interdum pharetra arcu, vel egestas
+turpis ornare a. Phasellus quis euismod diam, sed convallis dolor.
 
 <Divider />
 
@@ -23,35 +23,35 @@ npm install aThing `aThing` 'aThing' "aThing"
 <Divider />
 
 ```javascript
-  <SourceArticle
-    title={title}
-    tags={tags}
-    date={date}
-    dateModified={dateModified}
-    author={author}
-    isPrivate={isPrivate}
-    featuredImage={featuredImage}
-    embedded={embedded}
-    body={body}
-    timeToRead={timeToRead}
-    wordCount={wordCount}
-  />
+<SourceArticle
+  title={title}
+  tags={tags}
+  date={date}
+  dateModified={dateModified}
+  author={author}
+  isPrivate={isPrivate}
+  featuredImage={featuredImage}
+  embedded={embedded}
+  body={body}
+  timeToRead={timeToRead}
+  wordCount={wordCount}
+/>
 ```
 
 <Divider />
 
-<Flex sx={{ flexWrap: "wrap" }}>
-  <Box sx={{ mb: 3,width: ["100%", "50%"]}}>
-    Donec nec felis nec metus semper pharetra ut ut libero. Ut hendrerit dui ut tincidunt egestas. Donec interdum pharetra arcu, vel egestas turpis ornare a. Phasellus quis euismod diam, sed convallis dolor.
+<Flex sx={{ flexWrap: 'wrap' }}>
+  <Box sx={{ mb: 3, width: ['100%', '50%'] }}>
+    Donec nec felis nec metus semper pharetra ut ut libero. Ut hendrerit dui ut tincidunt egestas. Donec interdum
+    pharetra arcu, vel egestas turpis ornare a. Phasellus quis euismod diam, sed convallis dolor.
   </Box>
-  <Box sx={{ mb: 3, p:[0, 3], width: ["100%", "50%"] }}>
-    <GatsbyImage alt='embedded-image-1' image={props.embedded.image1}/>
+  <Box sx={{ mb: 3, p: [0, 3], width: ['100%', '50%'] }}>
+    <GatsbyImage alt="embedded-image-1" image={props.embedded.image1} />
   </Box>
 </Flex>
-
 
 ### [Gatsby](#gatsby)
 
 `<GatsbyImage alt='...' image={...}/>`
 
-<pre>{JSON.stringify(props.embedded.image1, null,2)}</pre>
+<pre>{JSON.stringify(props.embedded.image1, null, 2)}</pre>
