--- a/demo/src/_temp/source-tags.mdx
+++ b/demo/src/_temp/source-tags.mdx
@@ -3,19 +3,17 @@ navigationLabel: SourceTags
 ---
 
 <SourceTags>
-  {source => (
-    <Flex
-    sx={{flexDirection: 'column'}}
-    >
-      {
-        source.map((tag, index) => {
-          const {name, count, percent} = tag
-          return <Box  key={index}>
+  {(source) => (
+    <Flex sx={{ flexDirection: 'column' }}>
+      {source.map((tag, index) => {
+        const { name, count, percent } = tag
+        return (
+          <Box key={index}>
             {`${name}  x${count}`}
-            <Box mb={2}  bg='muted' sx={{width: `${percent}%`, height: 4}}></Box>
+            <Box mb={2} bg="muted" sx={{ width: `${percent}%`, height: 4 }}></Box>
           </Box>
-        })
-      }
+        )
+      })}
     </Flex>
   )}
 </SourceTags>
