--- a/demo/src/pages/markdown.mdx
+++ b/demo/src/pages/markdown.mdx
@@ -4,7 +4,8 @@ navigationLabel: Markdown
 
 # [markdown](#markdown)
 
-gatsby-theme-terminal supports the full set of [markdown shortcodes](https://github.com/adam-p/markdown-here/wiki/Markdown-Cheatsheet)
+gatsby-theme-terminal supports the full set of
+[markdown shortcodes](https://github.com/adam-p/markdown-here/wiki/Markdown-Cheatsheet)
 
 <hr />
 
@@ -12,16 +13,20 @@ gatsby-theme-terminal supports the full set of [markdown shortcodes](https://git
 
 ```markdown
 # h1
+
 ## h2
+
 ### h3
+
 #### h4
+
 ##### h5
+
 ###### h6
 
 Alternatively, for h1 and h2, an underline-ish style:
 
-Alt-h1
-======
+# Alt-h1
 
 Alt-h2
 ```
@@ -40,27 +45,25 @@ Alt-h2
 
 Alternatively, for h1 and h2, an underline-ish style:
 
-
 ## [Alt-h1](#alt-h1)
 
 Alt-h2
 
-
 ## [Emphasis](#emphasis)
 
 ```markdown
-Emphasis, aka italics, with *asterisks* or _underscores_.
+Emphasis, aka italics, with _asterisks_ or _underscores_.
 
-Strong emphasis, aka bold, with **asterisks** or __underscores__.
+Strong emphasis, aka bold, with **asterisks** or **underscores**.
 
 Combined emphasis with **asterisks and _underscores_**.
 
 Strikethrough uses two tildes. ~~Scratch this.~~
 ```
 
-Emphasis, aka italics, with *asterisks* or _underscores_.
+Emphasis, aka italics, with _asterisks_ or _underscores_.
 
-Strong emphasis, aka bold, with **asterisks** or __underscores__.
+Strong emphasis, aka bold, with **asterisks** or **underscores**.
 
 Combined emphasis with **asterisks and _underscores_**.
 
@@ -75,13 +78,15 @@ Strikethrough uses two tildes. ~~Scratch this.~~
 ```markdown
 1. First ordered list item
 2. Another item
-1. Actual numbers don't matter, just that it's a number
+3. Actual numbers don't matter, just that it's a number
 4. And another item.
 5. Code in list `boop`
 
-* Unordered list can use asterisks
-- Or minuses
-+ Or pluses
+- Unordered list can use asterisks
+
+* Or minuses
+
+- Or pluses
 ```
 
 1. First ordered list item
@@ -107,7 +112,7 @@ There are two ways to create links.
 
 [I'm an inline-style link with title](https://www.google.com "Google's Homepage")
 
-[I'm a reference-style link][Arbitrary case-insensitive reference text]
+[I'm a reference-style link][arbitrary case-insensitive reference text]
 
 [I'm a relative reference to a repository file](../blob/master/LICENSE)
 
@@ -115,9 +120,8 @@ There are two ways to create links.
 
 Or leave it empty and use the [link text itself].
 
-URLs and URLs in angle brackets will automatically get turned into links.
-http://www.example.com or <http://www.example.com> and sometimes
-example.com (but not on Github, for example).
+URLs and URLs in angle brackets will automatically get turned into links. http://www.example.com or
+<http://www.example.com> and sometimes example.com (but not on Github, for example).
 
 Some text to show that the reference links can follow later.
 
@@ -138,9 +142,8 @@ Some text to show that the reference links can follow later.
 
 Or leave it empty and use the [link text itself].
 
-URLs and URLs in angle brackets will automatically get turned into links.
-http://www.example.com or <http://www.example.com> and sometimes
-example.com (but not on Github, for example).
+URLs and URLs in angle brackets will automatically get turned into links. http://www.example.com or
+<http://www.example.com> and sometimes example.com (but not on Github, for example).
 
 Some text to show that the reference links can follow later.
 
@@ -154,23 +157,21 @@ Some text to show that the reference links can follow later.
 Here's our logo (hover to see the title text):
 
 Inline-style:
-![alt text](https://github.com/adam-p/markdown-here/raw/master/src/common/images/icon48.png "Logo Title Text 1")
+![alt text](https://github.com/adam-p/markdown-here/raw/master/src/common/images/icon48.png 'Logo Title Text 1')
 
-Reference-style:
-![alt text][logo]
+Reference-style: ![alt text][logo]
 
-[logo]: https://github.com/adam-p/markdown-here/raw/master/src/common/images/icon48.png "Logo Title Text 2"
+[logo]: https://github.com/adam-p/markdown-here/raw/master/src/common/images/icon48.png 'Logo Title Text 2'
 ```
 
 Here's our logo (hover to see the title text):
 
 Inline-style:
-![alt text](https://github.com/adam-p/markdown-here/raw/master/src/common/images/icon48.png "Logo Title Text 1")
+![alt text](https://github.com/adam-p/markdown-here/raw/master/src/common/images/icon48.png 'Logo Title Text 1')
 
-Reference-style:
-![alt text][logo]
+Reference-style: ![alt text][logo]
 
-[logo]: https://github.com/adam-p/markdown-here/raw/master/src/common/images/icon48.png "Logo Title Text 2"
+[logo]: https://github.com/adam-p/markdown-here/raw/master/src/common/images/icon48.png 'Logo Title Text 2'
 
 ## [Code and Syntax Highlighting](#code-and-syntax-highlighting)
 
@@ -182,13 +183,14 @@ Inline `code` has `back-ticks around` it.
 
 Inline `code` has `back-ticks around` it.
 
-Blocks of code are either fenced by lines with three back-ticks ```, or are indented with four spaces. I recommend only using the fenced code blocks -- they're easier and only they support syntax highlighting, but you must provide a language or none
+Blocks of code are either fenced by lines with three back-ticks ```, or are indented with four spaces. I recommend only
+using the fenced code blocks -- they're easier and only they support syntax highlighting, but you must provide a
+language or none
 
 ````markdown
-
 ```javascript
-var s = "JavaScript syntax highlighting"
-alert(s);
+var s = 'JavaScript syntax highlighting'
+alert(s)
 ```
 
 ```python
@@ -197,7 +199,7 @@ print s
 ```
 
 ```html
-<div> HTML syntax highlighting </div>
+<div>HTML syntax highlighting</div>
 ```
 
 ```none
@@ -207,7 +209,7 @@ alert(s)
 ````
 
 ```javascript
-var s = "JavaScript syntax highlighting"
+var s = 'JavaScript syntax highlighting'
 alert(s)
 ```
 
@@ -217,7 +219,7 @@ print s
 ```
 
 ```html
-<div> HTML syntax highlighting </div>
+<div>HTML syntax highlighting</div>
 ```
 
 ```none
@@ -225,29 +227,27 @@ var s = "JavaScript syntax highlighting"
 alert(s)
 ```
 
-
 ## [Tables](#tables)
 
-Tables aren't part of the core Markdown spec, but they are part of GFM and Markdown Here supports them. They are an easy way of adding tables to your email -- a task that would otherwise require copy-pasting from another application.
+Tables aren't part of the core Markdown spec, but they are part of GFM and Markdown Here supports them. They are an easy
+way of adding tables to your email -- a task that would otherwise require copy-pasting from another application.
 
 ```markdown
 Colons can be used to align columns.
 
 | Tables        |      Are      |   Cool |
-| ------------- | :-----------: | ------:|
-| col 3 is      | right-aligned |  \$1600 |
-| col 2 is      |   centered    |    \$12 |
-| zebra stripes |   are neat    |     \$1 |
+| ------------- | :-----------: | -----: |
+| col 3 is      | right-aligned | \$1600 |
+| col 2 is      |   centered    |   \$12 |
+| zebra stripes |   are neat    |    \$1 |
 
-There must be at least 3 dashes separating each header cell.
-The outer pipes (|) are optional, and you don't need to make the
-raw Markdown line up prettily. You can also use inline Markdown.
+There must be at least 3 dashes separating each header cell. The outer pipes (|) are optional, and you don't need to
+make the raw Markdown line up prettily. You can also use inline Markdown.
 
 | Markdown | Less      | Pretty     |
 | -------- | --------- | ---------- |
 | _Still_  | `renders` | **nicely** |
 | 1        | 2         | 3          |
-
 ```
 
 Colons can be used to align columns.
@@ -258,9 +258,8 @@ Colons can be used to align columns.
 | col 2 is      |   centered    |   \$12 |
 | zebra stripes |   are neat    |    \$1 |
 
-There must be at least 3 dashes separating each header cell.
-The outer pipes (|) are optional, and you don't need to make the
-raw Markdown line up prettily. You can also use inline Markdown.
+There must be at least 3 dashes separating each header cell. The outer pipes (|) are optional, and you don't need to
+make the raw Markdown line up prettily. You can also use inline Markdown.
 
 | Markdown | Less      | Pretty     |
 | -------- | --------- | ---------- |
@@ -272,21 +271,20 @@ raw Markdown line up prettily. You can also use inline Markdown.
 ## [Blockquotes](#blockquotes)
 
 ```markdown
-> Blockquotes are very handy in email to emulate reply text.
-> This line is part of the same quote.
+> Blockquotes are very handy in email to emulate reply text. This line is part of the same quote.
 
 Quote break.
 
-> This is a very long line that will still be quoted properly when it wraps. Oh boy let's keep writing to make sure this is long enough to actually wrap for everyone. Oh, you can *put* **Markdown** into a blockquote.
+> This is a very long line that will still be quoted properly when it wraps. Oh boy let's keep writing to make sure this
+> is long enough to actually wrap for everyone. Oh, you can _put_ **Markdown** into a blockquote.
 ```
 
-> Blockquotes are very handy in email to emulate reply text.
-> This line is part of the same quote.
+> Blockquotes are very handy in email to emulate reply text. This line is part of the same quote.
 
 Quote break.
 
-> This is a very long line that will still be quoted properly when it wraps. Oh boy let's keep writing to make sure this is long enough to actually wrap for everyone. Oh, you can _put_ **Markdown** into a blockquote.
-
+> This is a very long line that will still be quoted properly when it wraps. Oh boy let's keep writing to make sure this
+> is long enough to actually wrap for everyone. Oh, you can _put_ **Markdown** into a blockquote.
 
 ## [Inline HTML](#inline-html)
 
@@ -321,11 +319,11 @@ Three or more...
 
 Hyphens
 
-***
+---
 
 Asterisks
 
-___
+---
 
 Underscores
 ```
@@ -336,26 +334,25 @@ Three or more...
 
 Hyphens
 
-***
+---
 
 Asterisks
 
-___
+---
 
 Underscores
 
-
 ## [Line Breaks](#line-breaks)
 
-My basic recommendation for learning how line breaks work is to experiment and discover -- hit `<Enter>` once (i.e., insert one newline), then hit it twice (i.e., insert two new lines), see what happens. You'll soon learn to get what you want. "Markdown Toggle" is your friend.
+My basic recommendation for learning how line breaks work is to experiment and discover -- hit `<Enter>` once (i.e.,
+insert one newline), then hit it twice (i.e., insert two new lines), see what happens. You'll soon learn to get what you
+want. "Markdown Toggle" is your friend.
 
 ```markdown
-
 Here's a line for us to start with.
 
-This line is separated from the one above by two newlines, so it will be a *separate paragraph*.
+This line is separated from the one above by two newlines, so it will be a _separate paragraph_.
 
-This line is also a separate paragraph, but...
-This line is only separated by a single newline, so it's a separate line in the *same paragraph*.
-
+This line is also a separate paragraph, but... This line is only separated by a single newline, so it's a separate line
+in the _same paragraph_.
 ```
