--- a/demo/src/posts/2020/02/post-5.mdx
+++ b/demo/src/posts/2020/02/post-5.mdx
@@ -7,6 +7,8 @@ date: 2020-02-12
 
 Lorem ipsum dolor sit amet, consectetur adipiscing elit.
 
-Vivamus luctus tincidunt varius. In hac habitasse platea dictumst. Sed eu iaculis velit, in porttitor augue. Ut vitae sapien vestibulum, bibendum ipsum in, finibus arcu. Vestibulum euismod velit ex, et posuere elit iaculis vel. Donec sodales imperdiet posuere. Phasellus dui dolor, placerat in elementum vitae, gravida in quam
+Vivamus luctus tincidunt varius. In hac habitasse platea dictumst. Sed eu iaculis velit, in porttitor augue. Ut vitae
+sapien vestibulum, bibendum ipsum in, finibus arcu. Vestibulum euismod velit ex, et posuere elit iaculis vel. Donec
+sodales imperdiet posuere. Phasellus dui dolor, placerat in elementum vitae, gravida in quam
 
 <Button>Click me</Button>
