--- a/demo/src/projects/2020/01/project-3.mdx
+++ b/demo/src/projects/2020/01/project-3.mdx
@@ -6,4 +6,7 @@ url: https://example.com
 misc: Ahoy
 ---
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id enim et mauris elementum lobortis. Donec non tellus justo. Ut sit amet elit mauris. Praesent eleifend cursus luctus. Praesent posuere rhoncus maximus. Donec nec felis nec metus semper pharetra ut ut libero. Ut hendrerit dui ut tincidunt egestas. Donec interdum pharetra arcu, vel egestas turpis ornare a. Phasellus quis euismod diam, sed convallis dolor.
+Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id enim et mauris elementum lobortis. Donec non tellus
+justo. Ut sit amet elit mauris. Praesent eleifend cursus luctus. Praesent posuere rhoncus maximus. Donec nec felis nec
+metus semper pharetra ut ut libero. Ut hendrerit dui ut tincidunt egestas. Donec interdum pharetra arcu, vel egestas
+turpis ornare a. Phasellus quis euismod diam, sed convallis dolor.
